--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
+    "@mixin.dev/mixin-node-sdk": "^4.1.2",
+    "@reach/dialog": "^0.17.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -10,16 +13,42 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "assert": "^2.0.0",
+    "axios": "^0.27.2",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "bufferutil": "^4.0.6",
+    "classnames": "^2.3.1",
+    "crypto-browserify": "^3.12.0",
+    "dayjs": "^1.11.3",
+    "ethers": "^5.6.9",
+    "framer-motion": "^6.3.13",
+    "https-browserify": "^1.0.0",
+    "lodash": "^4.17.21",
+    "net": "^1.0.2",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "qrcode.react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.1",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwind-styled-components": "2.1.6",
+    "tls": "^0.0.1",
     "typescript": "^4.4.2",
+    "url": "^0.11.0",
+    "utf-8-validate": "^5.0.9",
+    "wagmi": "^0.4.12",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -39,5 +68,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/assert": "^1.5.6",
+    "@types/lodash": "^4.14.182",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/testing-library__user-event": "^4.2.0",
+    "autoprefixer": "^10.4.7",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.4"
   }
 }
