--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^16.7.13",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "assert": "^2.0.0",
     "axios": "^0.27.2",
     "browserify-zlib": "^0.2.0",
@@ -49,13 +45,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "lint": "eslint . && prettier --check .",
+    "format": "prettier --write ."
   },
   "browserslist": {
     "production": [
@@ -70,12 +62,25 @@
     ]
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/assert": "^1.5.6",
+    "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^16.7.13",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/testing-library__user-event": "^4.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
+    "eslint": "^8.18.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-memo": "^0.0.3",
     "postcss": "^8.4.14",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.11",
     "tailwindcss": "^3.1.4"
   }
 }
