--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16
 
-      - uses: pnpm/action-setup@2.2.2
+      - uses: pnpm/action-setup@v2.2.2
         with:
           version: 7
           run_install: false
