--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "qrcode.react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.33.0",
     "react-query": "^3.39.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/assert": "^1.5.6",
     "@types/jest": "^27.0.1",
