--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "stream-http": "^3.2.0",
     "tailwind-styled-components": "2.1.6",
     "tls": "^0.0.1",
-    "typescript": "^4.4.2",
+    "typescript": "^4.7.4",
     "url": "^0.11.0",
     "utf-8-validate": "^5.0.9",
     "wagmi": "0.5.6",
@@ -66,17 +66,19 @@
     "@tailwindcss/forms": "^0.5.2",
     "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/assert": "^1.5.6",
+    "@types/eslint": "^8.4.5",
     "@types/jest": "^28.1.4",
     "@types/lodash": "^4.14.182",
     "@types/node": "^16.7.13",
+    "@types/prettier": "2.6.3",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@types/testing-library__user-event": "^4.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
-    "eslint": "^8.18.0",
+    "eslint": "^8.19.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-memo": "^0.0.3",
